--- a/agent/src/main/resources/application.yaml
+++ b/agent/src/main/resources/application.yaml
@@ -1,10 +1,14 @@
 spring:
+  main:
+    web-application-type: none
+  application:
+    name: agent-test
   ai:
-    dashscope:
-      # 配置通义千问API密钥
-      api-key: sk-7021dc337f2e43b09f20ea93bd9421f3
-    mcp:
-      client:
-        stdio:
-          # 指定MCP服务器配置文件路径（推荐）
-          servers-configuration: classpath:/mcp-servers-config.json
+    openai:
+      api-key: sk-7d22f0384b2341448cecd8e2214f1eea
+      chat:
+        options:
+          model: deepseek-chat
+      base-url: https://api.deepseek.com
+      embedding:
+        enabled: false
