scg代理大模型

--- a/agent/src/main/resources/application.yaml
+++ b/agent/src/main/resources/application.yaml
@@ -10,5 +10,6 @@ spring:
         options:
           model: deepseek-chat
       base-url: https://api.deepseek.com
+      #base-url: http://localhost:8888
       embedding:
         enabled: false
