--- a/mcp/sse-mcp-client/src/main/resources/application.yaml
+++ b/mcp/sse-mcp-client/src/main/resources/application.yaml
@@ -20,3 +20,4 @@ spring:
           connections:
             weather-server:
               url: http://localhost:8080
+#              url: http://localhost:8888
