--- a/scg-llm/src/main/resources/application.yaml
+++ b/scg-llm/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
         - id: llm-proxy
           uri: https://api.deepseek.com/v1/chat/completions
           predicates:
-            - Method=POST
+            - Path=/v1/chat/completions
+        - id: sse-proxy
+          uri: http://localhost:8080
+          predicates:
+            - Path=/sse,/mcp/message
 server:
   port: 8888
