--- a/agent/src/main/resources/application.yaml
+++ b/agent/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     name: agent-test
   ai:
     openai:
-      api-key: sk-7d22f0384b2341448cecd8e2214f1eea
+      api-key: your-api-key
       chat:
         options:
           model: deepseek-chat
