--- a/mcp/sse-mcp-client/src/main/resources/application.yaml
+++ b/mcp/sse-mcp-client/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ spring:
     name: sse-mcp-client
   ai:
 #    dashscope:
-#      api-key: sk-7021dc337f2e43b09f20ea93bd9421f3
+#      api-key: your-api-key
     openai:
-      api-key: sk-7d22f0384b2341448cecd8e2214f1eea
+      api-key: your-api-key
       chat:
         options:
           model: deepseek-chat
